tests/negative/resource_named_struct_array_leak.ora
resource TokenUnit = u256;

struct Holder {
    place: Resource<TokenUnit>;
}

contract ResourceNamedStructArrayLeak {
    pub fn expose(values: [Holder; 2]) {}
}
